--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint **/*.js --fix --ignore-pattern node_modules/",
+    "test": "jest",
+    "test:c": "jest --coverage"
   },
   "repository": {
     "type": "git",
